@@ -30,17 +30,17 @@
 
 <?php $zm_theme->staticPageContent("contact_us") ?>
 
-<?php $form->open(FILENAME_CONTACT_US, 'action=send', false, array('id' => 'contact_us')) ?>
+<?php $form->open(FILENAME_CONTACT_US, 'action=send', false, array('id' => 'contactUs')) ?>
     <fieldset>
         <legend><?php zm_l10n("Contact us") ?></legend>
-        <label for="contactname"><?php zm_l10n("Full Name") ?><span>*</span></label>
-        <input type="text" id="contactname" name="contactname" size="40" value="<?php $html->encode($zm_contact->getName()) ?>" /><br />
+        <label for="name"><?php zm_l10n("Full Name") ?><span>*</span></label>
+        <input type="text" id="name" name="name" size="40" value="<?php $html->encode($contactUs->getName()) ?>" /><br />
 
         <label for="email"><?php zm_l10n("Email Address") ?><span>*</span></label>
-        <input type="text" id="email" name="email" size="40" value="<?php $html->encode($zm_contact->getEmail()) ?>" /><br />
+        <input type="text" id="email" name="email" size="40" value="<?php $html->encode($contactUs->getEmail()) ?>" /><br />
 
-        <label for="enquiry"><?php zm_l10n("Message") ?><span>*</span></label>
-        <textarea id="enquiry" name="enquiry" cols="30" rows="7"><?php $html->encode($zm_contact->getMessage()) ?></textarea>
+        <label for="message"><?php zm_l10n("Message") ?><span>*</span></label>
+        <textarea id="message" name="message" cols="30" rows="7"><?php $html->encode($contactUs->getMessage()) ?></textarea>
         <p class="legend"><?php zm_l10n("<span>*</span> Mandatory fields") ?></p>
     </fieldset>
     <div class="btn"><input type="submit" class="btn" value="<?php zm_l10n("Send") ?>" /></div>
